--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.14",
+    "@docusaurus/plugin-client-redirects": "2.0.0-beta.14",
     "@docusaurus/preset-classic": "2.0.0-beta.14",
     "@docusaurus/theme-search-algolia": "2.0.0-beta.14",
     "@mdx-js/react": "^1.5.8",
